# llm-chatbot-for-messengers

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  mkdocs.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task-specification.md
.github/workflows/: cd.yaml  ci.yaml
docs/: index.md
docs/about/: license.md
docs/design/: current.md  future.md
scripts/database/: core.sql  docker-compose.yaml
src/llm_chatbot_for_messengers/: main.py
src/llm_chatbot_for_messengers/core/: __init__.py  agent.py  configuration.py  custom_langgraph.py  error.py  parser.py  specification.py  template.py  user.py  vo.py  workflow.py
src/llm_chatbot_for_messengers/core/entity/: agent.py  messenger.py  user.py
src/llm_chatbot_for_messengers/core/output/: dao.py  memory.py  parser.py  template.py
src/llm_chatbot_for_messengers/core/workflow/: base.py  qa.py  vo.py
src/llm_chatbot_for_messengers/domain/: chatbot.py  configuration.py  error.py  factory.py  messenger.py  repository.py  service.py  specification.py  tracing.py
src/llm_chatbot_for_messengers/domain/entity/: agent.py  messenger.py  user.py
src/llm_chatbot_for_messengers/domain/output/: dao.py  memory.py  template.py
src/llm_chatbot_for_messengers/domain/workflow/: base.py  qa.py  vo.py
src/llm_chatbot_for_messengers/infra/: chatbot.py  messenger.py
src/llm_chatbot_for_messengers/infra/repository/: memory.py  template.py
src/llm_chatbot_for_messengers/ioc_container/: bootstrap.py  container.py  workflow.py
src/llm_chatbot_for_messengers/messenger/: vo.py
src/llm_chatbot_for_messengers/messenger/kakao/: api.py  container.py  vo.py
src/llm_chatbot_for_messengers/messenger/middleware/: rate_limit.py
src/llm_chatbot_for_messengers/messenger_if/: vo.py
src/llm_chatbot_for_messengers/messenger_if/kakao/: __init__.py  api.py  vo.py
src/llm_chatbot_for_messengers/messenger_if/middleware/: rate_limit.py
src/resources/prompt/answer_node/: kakao_v1.yaml  template.yaml
src/resources/prompt/summary_node/: kakao_v1.yaml
tests/: conftest.py
tests/core/: test_agent.py  test_dao.py  test_memory.py  test_parser.py  test_specification.py  test_template.py  test_usecase.py  test_vo.py  test_workflow.py
tests/core/entity/: test_messenger.py
tests/domain/: test_agent.py  test_chatbot.py  test_dao.py  test_factory.py  test_memory.py  test_messenger.py  test_parser.py  test_specification.py  test_template.py  test_vo.py  test_workflow.py
tests/domain/entity/: test_messenger.py
tests/messenger/kakao/: conftest.py  test_api.py
tests/messenger/middleware/: test_rate_limit.py
tests/messenger_if/kakao/: conftest.py  test_api.py
tests/messenger_if/middleware/: test_rate_limit.py
tests/resources/prompt/answer_node/: kakao_v1.yaml  kakao_v2.yaml  kakao_v3.yaml  template.yaml
tests/resources/prompt/summary_node/: test.yaml
tests/resources/prompt/test_node/: test.yaml
