[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-chatbot-for-messengers"
dynamic = ["version"]
description = 'LLM Chatbot for Messengers'
readme = "README.md"
requires-python = ">=3.11, <12"
license = "MIT"
keywords = []
authors = [
  { name = "sad-zero", email = "zeroro.yun@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "langchain>=0.3, <0.4",
  "langchain-openai>=0.2, <0.3",
  "langgraph>=0.2, <0.3",
  "pydantic>=2.9, <3.0",
]

[tool.hatch.version]
path = "src/llm_chatbot_for_messengers/__about__.py"

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff.toml"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/open_chatbot tests}"

[tool.coverage.run]
source_pkgs = ["open_chatbot", "tests"]
branch = true
parallel = true
omit = [
  "src/open_chatbot/__about__.py",
]

[tool.coverage.paths]
open_chatbot = ["src/open_chatbot", "*/open-chatbot/src/open_chatbot"]
tests = ["tests", "*/open-chatbot/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.ci]
extra-dependencies = [
  "pre-commit >= 4.0",
]

[tool.hatch.envs.ci.scripts]
install_precommit = "pre-commit install"
