[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-chatbot-for-messengers"
dynamic = ["version"]
description = 'LLM Chatbot for Messengers'
readme = "README.md"
requires-python = ">=3.11, <3.12"
license = "MIT"
keywords = []
authors = [
  { name = "sad-zero", email = "zeroro.yun@gmail.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "langchain>=0.3, <0.4",
  "langchain-community>=0.3, <0.4",
  "langchain-openai>=0.2, <0.3",
  "langgraph>=0.2, <0.3",
  "pydantic>=2.9, <3.0",
  "fastapi==0.115.5",
]

[tool.hatch.version]
path = "src/llm_chatbot_for_messengers/__about__.py"

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff.toml"

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.default.env-vars]
UV_PROJECT_ENVIRONMENT = ".venv/llm-chatbot-for-messengers"
OPENAI_API_KEY="<<YOUR OPENAI API KEY>>"
LANGCHAIN_TRACING_V2 = "true"
LANGCHAIN_API_KEY = "<<YOUR LANGSMITH API KEY>>"
LANGCHAIN_PROJECT = "<<YOUR LANGSMITH PROJECT NAME>>"

[tool.hatch.envs.default.scripts]
pip = "$HATCH_UV pip {args}"

[tool.hatch.envs.dev]
extra-dependencies = [
  "pytest>=8.3, <9.0",
  "pytest-asyncio>=0.24",
  "pre-commit >= 4.0",
]

[tool.hatch.envs.dev.env-vars]
UV_PROJECT_ENVIRONMENT = ".venv/dev"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "pytest>=8.3, <9.0",
  "pytest-asyncio>=0.24"
]
[tool.hatch.envs.types.scripts]
check = "mypy --check-untyped-defs --install-types --non-interactive {args:src/llm_chatbot_for_messengers tests}"
[tool.mypy]

[tool.hatch.envs.hatch-test.overrides]
matrix.feature.platforms = [
  { value = "macos"},
]
[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.11"]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "pytest-asyncio>=0.24"
]

[tool.hatch.envs.hatch-test.env-vars]
OPENAI_API_KEY = "<<TEST-API-KEY>>"

[tool.coverage.run]
source_pkgs = ["llm_chatbot_for_messengers", "tests"]
branch = true
parallel = true
omit = [
  "src/llm_chatbot_for_messengers/__about__.py",
]

[tool.coverage.paths]
llm_chatbot_for_messengers = ["src/llm_chatbot_for_messengers", "*/llm_chatbot_for_messengers/src/llm_chatbot_for_messengers"]
tests = ["tests", "*/llm_chatbot_for_messengers/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"

[tool.hatch.envs.ci]
extra-dependencies = [
  "pre-commit >= 4.0",
]

[tool.hatch.envs.ci.scripts]
install_precommit = "pre-commit install"
